--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,76 @@
+/* hero stuff */
 #hero {
 	width: 100%;
-	height: 705px;
+	height: 650px;
 	background: url("/img/local-buds-mockup1.png") no-repeat center;
 	background-size: cover;
+
+}
+
+.flexbox {
+    padding-top: 200px;
+}
+
+.hero-text {
+	font-size: 50px;
+}
+
+.hero-info {
+	top: 10px;
+	font-size: 17px;
+	color: grey;
+	font-weight: 200;
+}
+
+.hero-info-container {
+	margin-top: 30px; 
+}
+.btn-default {
+	border-color: #80e0a2;
+	border-width: 2px;
+	margin-top: 50px;
+	font-size: 17px;
+	color: #46d278;
+	padding-left: 40px;
+	padding-right: 40px;
+}
+
+.btn-default:hover {
+	border-color: #45a667;
+	background-color: #c2e5cf;
+	color: #45a667;
+}
+
+/* navbar */
+.navbar {
+	margin-bottom: 0px;
+	height: 65px;
+	background-color: rgba(255,255,255,0.2);
+	border-radius: 0;
+}
+
+.navbar-header {
+	padding: 8px 100px;
+}
+
+.navbar-right{
+	padding: 8px 100px;
+}
+
+.navbar-default .navbar-nav>li>a {
+	color: #46d278;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+	color: #45a667;
+	text-decoration: underline;
+}
+
+.navbar-default .navbar-brand {
+	color: #46d278;
+}
+
+.navbar-default .navbar-brand:hover {
+	color: #45a667;
+	text-decoration: underline;
 }
