--- a/public/css/main.css
+++ b/public/css/main.css
@@ -85,12 +85,17 @@
 	padding-bottom: 10px;
 	margin-top: 10px;
 	position: relative;
-	display: block;
+	display: inline;
+    margin-right: 30px;
 }
 
 .weed-types{
 	background-color: #f0f0f0;
 	height: 500px;
+}
+
+.weed-container {
+	max-height: 100%;
 }
 
 .weed-text{
@@ -113,7 +118,7 @@
 }
 
 .weed-div {
-	left: 10%;
+	height: 100%;
 }
 
 .weed-paragraph {
@@ -141,6 +146,8 @@
     display: inline-block;
 
 }
+
+
 
 /* strain carousel */
 
@@ -178,3 +185,14 @@
     background-color:#e84a6b;
     opacity:1;filter:"alpha(opacity=100)";
     -ms-filter
+}
+
+@media only screen and (max-width: 993px) {
+    .weed-types {
+    	height: 1000px;
+    }
+    .weed-div {
+    	margin-top: 45px;
+    }
+}
+
